bed leveling + advance pause
*.  added inductive sensor for bed leveling.
*. added advanced pause feature to enable auto unload/load filament
*. Add compiling flag to reduce the size of code enable auto pause feature.

--- a/platformio.ini
+++ b/platformio.ini
@@ -155,6 +155,11 @@ board         = sanguino_atmega644p
 platform      = atmelavr
 extends       = common_avr8
 board         = sanguino_atmega1284p
+lib_deps = ${common.lib_deps}
+#TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+src_filter = ${common.default_src_filter} +<src/HAL/AVR>
+build_unflags = -g -ggdb
+build_flags = ${common.build_flags} -fno-tree-scev-cprop -fno-split-wide-types -Wl,--relax -mcall-prologues -finline-limit=3 -ffast-math
 
 #
 # Melzi and clones (ATmega1284p)
@@ -169,7 +174,7 @@ upload_speed  = 57600
 #
 # Melzi and clones (Optiboot bootloader)
 #
-[env:melzi_optiboot]
+[env:melzi_optiboot]  
 platform      = atmelavr
 extends       = env:melzi
 upload_speed  = 115200
